# ProjGUI

./: add_rule.ui  main.py  main_window.ui  pyproject.toml  ui_main.py  ui_rules.py
rules/: connection.py  rules_actions.py
utils/: process_rules.py  process_text.py
